--- a/_posts/2015-12-13-aether-8.md
+++ b/_posts/2015-12-13-aether-8.md
@@ -19,3 +19,5 @@ For a fuller explanation of the changes, see the new [Release Notes][release] in
 [guides]: /aether/guides
 
 <!--- External --->
+
+[release]: https://github.com/xyncro/aether/blob/master/RELEASE_NOTES.md
