--- a/_posts/2015-12-13-chiron-6.md
+++ b/_posts/2015-12-13-chiron-6.md
@@ -7,7 +7,7 @@ Chiron 6.0.0 is available. The path to 6 should be straightforward if you're usi
 
 ## What's New?
 
-For changes, see the new [Release Notes][release] in the Aether repository.
+For changes, see the new [Release Notes][release] in the Chiron repository.
 
 <!--- External --->
 
